--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,6 +40,33 @@ body {
 .form-control,
 .form-control-types > div {
   margin: 0 0 10px 0;
+  position: relative;
+  overflow: hidden;
+}
+.form-control label {
+  display: block;
+  overflow: hidden;
+}
+.animation-input {
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  position: absolute;
+  bottom: 0;
+}
+.animation-input::after {
+  content: "";
+  width: 100%;
+  height: 3px;
+  background: #ef3b3a;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  transition: 0.3s ease all;
+}
+.form-control input:focus + .animation-input::after {
+  transform: translateX(0);
 }
 .form-control input {
   width: 100%;
