--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,68 @@
 body {
   font-family: Helvetica, serif;
 }
+/* header styles  */
+.header {
+  width: 100%;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  background: #ffffff;
+}
+.header-title {
+  font-size: 20px;
+  font-family: Helvetica, serif;
+  letter-spacing: 1px;
+}
+.header-user {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+}
+.header-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  margin: 0 5px 0 0;
+  border: 1px solid #cccccc;
+}
+
+.header .wrapper {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 15px;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: auto;
+}
+.menu-list {
+  display: inherit;
+  align-items: inherit;
+  height: inherit;
+}
+.menu-item {
+  display: inherit;
+  align-items: inherit;
+  height: inherit;
+  width: 100px;
+}
+.menu-item.user {
+  width: auto;
+}
+.menu-item.user.hidden {
+  display: none;
+}
+
 .wrapper {
   width: 100%;
   height: 100vh;
