Print information in DOM and put styles for RWD

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -14,13 +14,11 @@
         <h1 class="header-title">Blog</h1>
         <nav class="menu">
           <ul class="menu-list">
+            <!-- <li class="menu-item singOut">
+              <div class="singOut" id="js_singOut">Cerrar sesión</div>
+            </li> -->
             <li class="menu-item user hidden">
-              <section class="header-user">
-                <div class="header-user-avatar">
-                  <img src="#" alt="Avatar" />
-                </div>
-                <span>Nombre:</span>
-              </section>
+              <section class="header-user" id="js_user-information"></section>
             </li>
           </ul>
         </nav>
