--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,9 +18,70 @@ body {
   letter-spacing: 1px;
 }
 .header-user {
+  height: 100%;
   display: flex;
   align-items: center;
   font-size: 12px;
+  position: relative;
+}
+.header-user-avatar img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 0 8px 0 0;
+}
+.header-user-information {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.header-user-information span {
+  margin: 0 0 4px 0;
+  font-size: 14px;
+}
+.header-user-information span:last-child {
+  font-size: 12px;
+  margin: 0;
+}
+.header-user-information span b {
+  font-size: 14px;
+}
+.header-user-singOut {
+  margin: 0 0 0 10px;
+  height: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.header-user-singOut i {
+  font-size: 16px;
+  pointer-events: none;
+}
+.header-user-singOut-text {
+  position: absolute;
+  width: 200px;
+  background: #f2f2f2;
+  bottom: -40px;
+  right: 0;
+  height: 30px;
+  cursor: pointer;
+  transition: 0.3s ease all;
+}
+.header-user-singOut-text:hover {
+  background: #e0dfdf;
+}
+.header-user-singOut-text span {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+}
+.header-user-singOut-text span i {
+  margin: 0 8px 0 0;
+  font-size: 17px;
 }
 .header-avatar {
   width: 40px;
@@ -32,11 +93,11 @@ body {
 
 .header .wrapper {
   width: 100%;
-  height: 50px;
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 15px;
+  padding: 10px 15px;
 }
 
 .menu {
@@ -200,6 +261,14 @@ body {
 }
 
 @media screen and (max-width: 420px) {
+  .header .wrapper {
+    height: auto;
+    flex-direction: column;
+    padding: 15px;
+  }
+  .menu {
+    margin: 10px 0 0 0;
+  }
   .wrapper {
     padding: 0 15px;
   }
