--- a/src/css/main.css
+++ b/src/css/main.css
@@ -98,6 +98,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 10px 15px;
+  background: #f2f2f2;
 }
 
 .menu {
@@ -115,7 +116,41 @@ body {
   display: inherit;
   align-items: inherit;
   height: inherit;
-  width: 100px;
+  width: 130px;
+  cursor: pointer;
+}
+
+.menu-item.singIn {
+  position: relative;
+}
+
+.menu-item.singIn .singIn {
+  font-size: 15px;
+  font-weight: bold;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.menu-item.singIn .singIn::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  width: 100%;
+  height: 2px;
+  background: #ef3b3a;
+  opacity: 0;
+  transition: 0.3s ease all;
+}
+.menu-item.singIn .singIn::after {
+  content: "\f107";
+  font-family: FontAwesome;
+  margin: 0 0 0 5px;
+  font-size: 17px;
+}
+.menu-item.singIn .singIn:hover::before {
+  opacity: 1;
 }
 .menu-item.user {
   width: auto;
@@ -130,17 +165,56 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #f2f2f2;
+  background: #ffffff;
+}
+
+.wrapper.modal-form {
+  position: relative;
+}
+
+.wrapper.modal-form.fadeOut {
+  animation: fadeOut 0.3s ease-out forwards;
+}
+
+.wrapper.modal-form.fadeIn {
+  animation: fadeIn 0.3s ease-out forwards;
+}
+
+.wrapper.modal-form .btn-close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.wrapper.modal-form .btn-close i {
+  font-size: 35px;
+  color: #ef3b3a;
+}
+
+.form-login {
+  position: absolute;
+  bottom: -446px;
+  right: 0;
+}
+
+.form-login.hidden {
+  display: none;
 }
 
 .form {
   padding: 15px;
   text-align: center;
-  min-width: 380px;
+  min-width: 300px;
   height: auto;
   width: 100%;
   background: #ffffff;
-  border-radius: 5px;
+  border-radius: 0;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -258,6 +332,24 @@ body {
 }
 .show-more-types:hover {
   text-decoration: underline;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 0%;
+  }
 }
 
 @media screen and (max-width: 420px) {
